--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
             persist-credentials: false
 
       - name: Install and Build
-        run: yarn install && yarn run build
+        run: yarn install && yarn run build --base=/My_blog/
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
