--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run:  npm install || npm run build --if-present
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+          personal_token: ${{ secrets.ACCESS_TOKEN }}
+          publish_dir: ./dist
