--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "my_blog",
+  "name": "my-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "beautify": "yarn prettier --write ."
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "@highlightjs/vue-plugin": "^2.1.0",
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.30",
+    "highlight.js": "^11.7.0",
+    "md-editor-v3": "^2.8.1",
+    "showdown": "^2.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue3-lazyload": "^0.3.6",
+    "vuex": "^4.0.0",
+    "webp-converter": "^2.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -21,9 +28,15 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "archiver": "^5.3.1",
+    "compression-webpack-plugin": "^10.0.0",
+    "prettier": "2.8.4",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "ssh2": "^1.11.0",
+    "typescript": "~4.5.5",
+    "unplugin-auto-import": "^0.14.3",
+    "unplugin-vue-components": "^0.24.0"
   },
   "browserslist": [
     "> 1%",
