--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@highlightjs/vue-plugin": "^2.1.0",
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.30",
     "highlight.js": "^11.7.0",
     "md-editor-v3": "^2.8.1",
+    "prismjs": "^1.29.0",
     "showdown": "^2.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
