--- a/package.json
+++ b/package.json
@@ -12,15 +12,25 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@kangc/v-md-editor": "^2.3.15",
     "axios": "^1.3.3",
+    "chatgpt": "^5.2.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.30",
     "highlight.js": "^11.7.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-toc-done-right": "^4.2.0",
     "md-editor-v3": "^2.8.1",
+    "mini-css-extract-plugin": "^2.7.5",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "openai": "^3.2.1",
     "prismjs": "^1.29.0",
     "showdown": "^2.1.0",
+    "terser-webpack-plugin": "^5.3.7",
+    "use-editor-js": "^1.0.4-c",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-lazyload": "^0.3.6",
+    "vue3-markdown-it": "^1.0.10",
+    "vueds": "^0.9.1",
     "vuex": "^4.0.0",
     "webp-converter": "^2.3.3"
   },
@@ -32,11 +42,13 @@
     "@vue/cli-service": "~5.0.0",
     "archiver": "^5.3.1",
     "compression-webpack-plugin": "^10.0.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "prettier": "2.8.4",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ssh2": "^1.11.0",
     "typescript": "~4.5.5",
+    "uglifyjs-webpack-plugin": "1.1.1",
     "unplugin-auto-import": "^0.14.3",
     "unplugin-vue-components": "^0.24.0"
   },
