博客文章详情页优化

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@kangc/v-md-editor": "^2.3.15",
     "axios": "^1.3.3",
     "chatgpt": "^5.2.2",
+    "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.30",
     "highlight.js": "^11.7.0",
-    "markdown-it-abbr": "^1.0.4",
-    "markdown-it-toc-done-right": "^4.2.0",
+    "marked": "^4.3.0",
     "md-editor-v3": "^2.8.1",
     "mini-css-extract-plugin": "^2.7.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
@@ -26,6 +26,7 @@
     "showdown": "^2.1.0",
     "terser-webpack-plugin": "^5.3.7",
     "use-editor-js": "^1.0.4-c",
+    "useless-files-webpack-plugin": "^1.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-lazyload": "^0.3.6",
@@ -41,6 +42,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "archiver": "^5.3.1",
+    "babel-plugin-prismjs": "^2.1.0",
     "compression-webpack-plugin": "^10.0.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "prettier": "2.8.4",
